# pistachio

./: .clang-format  .clang-tidy  .gitignore  .hgignore  .pre-commit-config.yaml  .shellcheckrc  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README  meson.build  setup.sh
.codex/: setup.sh
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql-analysis.yml  reviewdog.yml  tla-model-check.yml
contrib/cml2/: cmlcompile.py  cmlconfigure.py  cmlsystem.py  configtrans.py  tree.py
contrib/disas/: ppc-dis.cc  ppc-opc.cc
contrib/include/: svr4_machdep.hpp
doc/: resource_mgmt_mapping.md
doc/misc/: announce-0.1.txt
doc/notes/: ppc-build.txt
doc/whitepaper/: whitepaper.tex
docs/: README.md  architecture.md  building.md  cpp17_refactor_plan.md  exokernel_migration.md  grained_locking.md  history.md  i16_port.md  ipc_overview.md  lattice_ipc.md  machdep_cpp23.cpp  mlp_scheduler.md  package_list.md  posix_compatibility.md  posix_roadmap.md  recursion_chimeric_design.md  server_interfaces.md  svr4_machdep_cpp23.cpp  thread_scheduling.md  trapgate_rip_notes.md  vfs.md
docs/legacy/: resource_mgmt_mapping.md
docs/legacy/whitepaper/: whitepaper.tex
docs/systemd/: codex-setup.service
engine/: AGENTS.md
engine/bootstrap/: bootstrap.c  def_pager_setup.c  dosfs_io.c  file_io.c  load.c  strfcns.cpp  strfcns.h  ufs_io.c
engine/bootstrap 2/: bootstrap.c  file_io.h
engine/contrib/cml2/: cml.py  cmlcompile.py  cmlconfigure.py
engine/contrib/include/: stdarg.h  svr4_machdep.h  svr4_machdep.hpp
engine/crypto/: pqcrypto.cpp
engine/emulator/: Makeconf  emul_init.c  syscall_table.h
engine/emulator/i386/: emul_vector.s
engine/include/: emulator_base.c  ipc.h  lattice_channel.hpp  lattice_ipc.h  param.c  pqcrypto.hpp  schedule.h  tracepoint_list.h  typed_channel.h  wait_graph.h  wormhole.hpp
engine/include/device/: Makefile
engine/include/include/: SYS.h  arp.h  audit.h  auth.h  bid.h  bidctl.h  blast.h  c23_arch.h  cap.h  chan.h  crypt.h  diagnostic.h  dirent.h  enclave.h  eon.h  eth.h  event 2.h  event.h  gateway.h  gc 2.h  gethost.h  gmp.h  icmp.h  id128.h  idmap 2.h  inet.h  ip.h  ipc_queue.h  join.h  keystore.h  list.h  llc.h  md5hash 2.h  mrouting.h  mselect.h  msg.h  netmask.h  part.h  posix.h  posix_ipc.h  (+30 more)
engine/include/kernel 2/: CMakeLists.txt
engine/include/m88k 2/: Makefile
engine/include/mach/: Makefile
engine/include/ns532/: emul_machdep.c  emul_vector.s
engine/include/sys/: Makefile
engine/include/tests/: spinlock_fairness.cpp  test_attributes.py  test_i16_build.py  test_ipc_helpers.py  test_memparse_tool.py  test_mlp_scheduler_build.py  test_ptrace.py  test_self_ipc.py  test_spinlock_fairness_build.py  test_spinlock_process.py  test_subdomain.py  test_typed_channel.py  test_types_size.py
engine/include/tools/: check_allowed_sources.py
engine/include/user/: README.HG  compile_commands.json  config.h  config.mk  config.mk.in  configure.in  create_ccdb.py
engine/include/user/apps/ipc_demo/: CMakeLists.txt
engine/include/user/apps/ipc_demo/self_ipc/: main.cc
engine/include/user/apps/ipc_demo/typed_channel/: Makefile.in  main.cc
engine/include/user/apps/l4test/: ipc.cc  l4test.h  mem.cc  menu.cc  meson.build  tcontrol.cc
engine/include/user/apps/l4test/powerpc64/: help.cc
engine/include/x86/: init.h
engine/kernel/Mk/: Makeconf  Makeconf.i16  Makeconf.x86
engine/kernel/include/: runqueue.h
engine/mips/: Makefile
engine/src/: ipc.c  lattice_ipc.cpp  schedule.c  wait_graph.cpp  wormhole.cpp
engine/src/x86/: exception.S  init.c
include/: door.h  exo_ipc.h
kernel/: CMakeLists.txt
kernel/Mk/: Makeconf
kernel/config/: x86.cml
kernel/config/template/: Makeconf.local.template
kernel/kdb/generic/: cmd.cc  console.cc  input.cc  linear_ptab_dump.cc  mdb.cc  print.cc  tracepoints.cc
kernel/src/: runqueue.cc
kernel/src/generic/: Makeconf  acpi.cc  acpi.h  asid.h  irq_manager.cc  lib.cc  linear_ptab_walker.cc  mapping.cc  mdb.cc  mdb_mem.cc  sync.h  types.h  user_mem.cc  vrt.cc  vrt.h
offline_packages/: README.md
scripts/: inventory.py  unified_build.sh
src-userland/lib/: CMakeLists.txt  Makefile
src-userland/lib/ipc/: user_ipc.cc
src-userland/lib/libcapnp/: CMakeLists.txt  capnp.c  capnp.h
src-userland/lib/sched/: sched_client.cc  sched_client.h
tests/: CMakeLists.txt  spinlock_fairness.c  test_attributes.py  test_i16_build.py  test_ipc_helpers.py  test_mlp_scheduler_build.py  test_posix_build.py  test_spinlock.py  test_subdomain.py  test_tools.py  test_types_size.py  test_waitqueue.py
tests/posix/: spawn_child.c  test_addr.c  test_file.c  test_permissions.c  test_process.c  test_signal.cc  test_sockopt.c  test_spawn_wait.c  test_timer.c  test_wrappers.cc
tla/: TicketLock.cfg  TicketLock.tla
tools/: README.md  autobuild  bitfield_gen.py  changed.sh  check_allowed_sources.py  condition.py  invocation_header_gen.py  syscall_header_gen.py  xmllint.sh
tools/memserver/: CMakeLists.txt  memparse.cc
user/: README.HG  config.mk  config.mk.in  configure  configure.in
user/Mk/: l4.base.mk  l4.build.mk  l4.lib.mk
user/apps/: Makefile.in  dirlist.c
user/apps/bench/: meson.build
user/apps/fifo_test/: fifo_test.c
user/apps/grabmem/: grabmem.cc  meson.build
user/apps/ipc_demo/: Makefile.in
user/apps/l4test/: exreg.cc  kip.cc  schedule.cc  sig0.cc
user/apps/memdemo/: Makefile.in  memdemo.cc
user/apps/posix/: cwd_example.c  exec_example.c  link_example.c
user/include/: dirent.h  mailbox_t.h  pthread.h
user/include/l4/: compiler.h  exo_ipc.h  ipc.h  memory.h  types.h
user/lib/: Makefile.in  meson.build
user/lib/capnp/: Makefile.in  capnp.cc  capnp.h
user/lib/io/: 1275tree.cc  powerpc.cc  print.cc
user/lib/ipc/: Makefile.in  mailbox.c  user_ipc.h
user/lib/l4/: amd64.cc  debug.cc  powerpc.cc  powerpc64.cc
user/lib/memory/: Makefile.in  memory.cc
user/lib/mlp/: Makefile.in  mlp.cc  mlp.h
user/lib/posix/: Makefile.in  ipc.c  posix.cc  posix.h
user/lib/pthread/: Makefile.in  pthread.cc
user/lib/sched/: Makefile.in
user/serv/: Makefile.in  meson.build
(+898 files in other folders)
